--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,4 +39,8 @@
     <dimen name="version_list_margin_top">10dp</dimen>
     <dimen name="button_check_item_margin_top">10dp</dimen>
     <dimen name="check_text_margin_left">5dp</dimen>
+    <dimen name="detail_text_margin_top">36dp</dimen>
+    <dimen name="detail_text_margin_left">37dp</dimen>
+    <dimen name="lightness_down_width_height">30dp</dimen>
+    <dimen name="lightness_up_width_height">40dp</dimen>
 </resources>
