--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -33,11 +33,8 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/check_layout"
-        android:background="@drawable/start_test_button"
-        android:layout_marginTop="69dp"/>
+        android:layout_marginTop="69dp"
+        style="@style/Widget.Button.StartTestLong"/>
 
 </RelativeLayout>
