--- a/app/src/main/res/layout/fragment_head_shake.xml
+++ b/app/src/main/res/layout/fragment_head_shake.xml
@@ -38,12 +38,9 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@id/check_layout"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="33dp"
-        android:background="@drawable/start_test_button" />
+        style="@style/Widget.Button.StartTestLong"/>
 </RelativeLayout>
 
 
