--- a/app/src/main/res/layout/fragment_lcd.xml
+++ b/app/src/main/res/layout/fragment_lcd.xml
@@ -31,22 +31,16 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            style="Widget.MyCheckBox.TextView"
+            style="@style/Widget.MyCheckBox.TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lcd_test_fail" />
     </LinearLayout>
 
-
     <Button
         android:id="@+id/button"
-        android:layout_width="401dp"
-        android:layout_height="60dp"
         android:layout_below="@id/lcd_result"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
-        android:background="@drawable/button_long"
         android:text="@string/start_test"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp" />
+        style="@style/Widget.Button.StartTestLong"/>
 </RelativeLayout>
