--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -33,10 +33,7 @@
     </LinearLayout>
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/check_layout"
         android:layout_marginTop="@dimen/margin_top"
-        android:background="@drawable/start_test_button"/>
+        style="@style/Widget.Button.StartTestLong"/>
 </RelativeLayout>
