--- a/app/src/main/res/layout/fragment_speaker.xml
+++ b/app/src/main/res/layout/fragment_speaker.xml
@@ -84,11 +84,8 @@
     </GridLayout>
     <Button
         android:id="@+id/speaker_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/start_test_button"
-        android:layout_centerHorizontal="true"/>
+        style="@style/Widget.Button.StartTestLong"/>
 
 </RelativeLayout>
