--- a/app/src/main/res/layout/fragment_standby.xml
+++ b/app/src/main/res/layout/fragment_standby.xml
@@ -6,20 +6,22 @@
 
 <ImageView
     android:id="@+id/buttons"
-    android:layout_width="220dp"
-    android:layout_height="180dp"
+    android:layout_width="@dimen/buttons_width"
+    android:layout_height="@dimen/buttons_height"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
-    android:layout_marginLeft="35dp"
-    android:layout_marginTop="25dp"
+    android:layout_marginLeft="47dp"
+    android:layout_marginTop="33dp"
     android:background="@drawable/standby_button"/>
     <LinearLayout
         android:id="@+id/check_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/buttons"
-        android:layout_marginTop="35dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="49dp"
         android:layout_marginLeft="10dp"
+        android:gravity="center"
         android:orientation="horizontal">
         <CheckBox
             android:id="@+id/check"
@@ -28,6 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.MyCheckBox.TextView"
             android:text="@string/standby_fail"/>
     </LinearLayout>
 
@@ -36,12 +39,14 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/buttons"
         android:layout_alignLeft="@id/check_layout"
+        style="@style/Widget.TextView.StyleB"
         android:text="@string/touch_power"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/buttons"
-        android:layout_marginTop="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
         android:layout_alignLeft="@id/buttons"
+        style="@style/Widget.TextView.StyleC"
         android:text="@string/standby_detail"/>
 </RelativeLayout>
