--- a/app/src/main/res/drawable/buttons_list_corner.xml
+++ b/app/src/main/res/drawable/buttons_list_corner.xml
@@ -4,6 +4,7 @@
         <shape>
             <solid android:color="#EFEFF0" />
             <corners android:radius="10dp" />
+            <padding android:left="5dp" android:right="5dp"/>
         </shape>
     </item>
 
