--- a/app/src/main/res/layout/fragment_body_shake.xml
+++ b/app/src/main/res/layout/fragment_body_shake.xml
@@ -7,11 +7,7 @@
 
     <TextView
         android:id="@+id/detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="32dp"
+        style="@style/Widget.TextView.Detail"
         android:text="@string/body_shake_detail" />
 
     <LinearLayout
@@ -20,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/detail"
         android:layout_below="@id/detail"
-        android:layout_marginTop="27dp">
+        android:gravity="center"
+        android:layout_marginTop="60dp">
 
         <CheckBox
             android:id="@+id/check"
@@ -28,9 +25,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            style="@style/Widget.MyCheckBox.TextView"
             android:text="@string/body_shake_fail" />
 
 
@@ -38,9 +33,7 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_below="@id/check_layout"
-        android:layout_marginTop="33dp"
-        style="@style/Widget.Button.StartTestLong"/>
+        style="@style/Widget.Button.StartTestLong" />
 </RelativeLayout>
 
 
