--- a/app/src/main/res/layout/fragment_ddr.xml
+++ b/app/src/main/res/layout/fragment_ddr.xml
@@ -6,26 +6,27 @@
 
     <TextView
         android:id="@+id/detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:layout_marginTop="@dimen/margin_top"
+        style="@style/Widget.TextView.Detail"
         android:text="@string/ddr_detail" />
 
     <TextView
         android:id="@+id/tips"
+        style="@style/Widget.TextView.StyleB"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/detail"
+        android:layout_below="@id/detail"
+        android:layout_marginTop="44dp"
+        android:text="@string/ready_test"/>
 
     <LinearLayout
         android:id="@+id/check_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/detail"
-        android:layout_below="@id/detail"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_below="@id/tips"
+        android:layout_marginTop="44dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <CheckBox
@@ -34,15 +35,11 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            style="@style/Widget.MyCheckBox.TextView"
             android:text="@string/ddr_fail" />
     </LinearLayout>
 
     <Button
         android:id="@+id/button"
-        android:layout_below="@id/check_layout"
-        android:layout_marginTop="@dimen/margin_top"
-        style="@style/Widget.Button.StartTestLong"/>
+        style="@style/Widget.Button.StartTestLong" />
 </RelativeLayout>
