--- a/app/src/main/res/layout/fragment_monitor.xml
+++ b/app/src/main/res/layout/fragment_monitor.xml
@@ -6,34 +6,30 @@
 
     <TextView
         android:id="@+id/detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:layout_marginTop="@dimen/margin_top"
-        android:text="@string/monitor_detail"/>
+        style="@style/Widget.TextView.Detail"
+        android:text="@string/monitor_detail" />
 
     <LinearLayout
         android:id="@+id/check_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/detail"
         android:layout_alignLeft="@id/detail"
-        android:layout_marginTop="@dimen/margin_top"
+        android:layout_below="@id/detail"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
         android:orientation="horizontal">
+
         <CheckBox
             android:id="@+id/check"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/monitor_fail"/>
+            style="@style/Widget.MyCheckBox.TextView"
+            android:text="@string/monitor_fail" />
     </LinearLayout>
+
     <Button
         android:id="@+id/button"
-        android:layout_below="@id/check_layout"
-        android:layout_marginTop="@dimen/margin_top"
-        style="@style/Widget.Button.StartTestLong"/>
+        style="@style/Widget.Button.StartTestLong" />
 </RelativeLayout>
