--- a/app/src/main/res/layout/fragment_rtc.xml
+++ b/app/src/main/res/layout/fragment_rtc.xml
@@ -10,11 +10,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="93dp"
         android:text="14:50:52"
         android:textColor="@color/rtc_red"
-        android:textSize="27sp" />
+        android:textSize="37sp" />
 
     <LinearLayout
         android:id="@+id/check_layout"
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/time"
         android:layout_below="@id/time"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="43dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <CheckBox
@@ -31,9 +32,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            style="@style/Widget.MyCheckBox.TextView"
             android:text="@string/rtc_fail" />
     </LinearLayout>
 
@@ -42,7 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/time"
         android:layout_below="@id/check_layout"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="43dp"
+        style="@style/Widget.TextView.StyleC"
         android:text="@string/rtc_detail" />
 
 </RelativeLayout>
