--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,8 @@
     </style>
 
     <style name="Widget.MyCheckBox.TextView" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:textColor">@color/text_b</item>
         <item name="android:textSize">@dimen/text_b</item>
@@ -27,6 +29,7 @@
     <style name="Widget.TextView.StyleC" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/text_c</item>
         <item name="android:textSize">@dimen/text_c</item>
+        <item name="android:lineSpacingMultiplier">1.2</item>
     </style>
 
     <style name="Widget.TextView.StyleB" parent="@android:style/Widget.TextView">
@@ -39,6 +42,16 @@
         <item name="android:textSize">@dimen/text_a</item>
     </style>
 
+    <style name="Widget.TextView.StyleRed" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">#FD5A44</item>
+        <item name="android:textSize">27dp</item>
+    </style>
+
+    <style name="Widget.TextView.StyleBlack" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">#343434</item>
+        <item name="android:textSize">27dp</item>
+    </style>
+
     <style name="Widget.Button.StartTestLong" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/button_long</item>
         <item name="android:textColor">@color/text_a</item>
@@ -47,6 +60,8 @@
         <item name="android:layout_width">401dp</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_marginBottom">40dp</item>
     </style>
 
     <style name="Widget.TextView.Detail" parent="@android:style/Widget.TextView">
@@ -58,5 +73,6 @@
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_marginTop">@dimen/detail_text_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/detail_text_margin_left</item>
+        <item name="android:lineSpacingMultiplier">1.2</item>
     </style>
 </resources>
