show test result ok

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
                 android:layout_marginTop="@dimen/main_test_result_margin_top">
 
                 <ImageView
+                    android:id="@+id/main_test_result_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/textView"
