--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -42,6 +42,8 @@
             android:layout_marginBottom="7dp"
             android:layout_marginLeft="7dp"
             android:layout_marginTop="7dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             android:dividerHeight="1dp"
             android:divider="@color/color03"
             android:background="@drawable/main_bottom_left_background"
