--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -38,9 +38,10 @@
             android:layout_width="54dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="9dp" />
+            android:layout_marginRight="9dp"
+            android:layout_marginTop="10dp"
+            toggle:isDefaultOn="true" />
 
     </RelativeLayout>
 
