--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -111,43 +111,43 @@
                 android:text="@string/button_back_fail" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/button_check_item_margin_top"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/button_check_item_margin_top"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal">-->
 
-            <CheckBox
-                android:id="@+id/home_check_box"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!--<CheckBox-->
+                <!--android:id="@+id/home_check_box"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MyCheckBox.TextView"
-                android:text="@string/button_home_fail" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--style="@style/Widget.MyCheckBox.TextView"-->
+                <!--android:text="@string/button_home_fail" />-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/button_check_item_margin_top"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/button_check_item_margin_top"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal">-->
 
-            <CheckBox
-                android:id="@+id/power_check_box"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!--<CheckBox-->
+                <!--android:id="@+id/power_check_box"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MyCheckBox.TextView"
-                android:text="@string/button_power_fail" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--style="@style/Widget.MyCheckBox.TextView"-->
+                <!--android:text="@string/button_power_fail" />-->
+        <!--</LinearLayout>-->
     </LinearLayout>
 
 </RelativeLayout>
