--- a/app/src/main/res/layout/back_dialog.xml
+++ b/app/src/main/res/layout/back_dialog.xml
@@ -3,28 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/buttons_list_corner"
-    android:minHeight="320dp"
-    android:minWidth="480dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="0dp">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="50dp"
         android:gravity="center"
         android:text="@string/test_not_finish_title"
-        android:textSize="25sp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/test_not_finish_alert"
-        android:textColor="@color/text_b"
-        android:background="@android:color/white"
-        android:textSize="21sp" />
+        android:textSize="@dimen/text_a"
+        android:textColor="#6F6F6F" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1px"
+        android:background="#DFDFE0"></LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@android:color/white"
+        android:text="@string/test_not_finish_alert"
+        android:textColor="#898989"
+        android:gravity="center_vertical"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textSize="@dimen/text_b" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#DFDFE0"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
         <TextView
@@ -34,7 +47,13 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/confirm"
-            android:textSize="25sp" />
+            android:textSize="@dimen/text_a"
+            android:textColor="#6F6F6F" />
+
+        <LinearLayout
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="#DFDFE0"></LinearLayout>
 
         <TextView
             android:id="@+id/cancel"
@@ -43,6 +62,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/cancel"
-            android:textSize="25sp" />
+            android:textSize="@dimen/text_a"
+            android:textColor="#6F6F6F" />
     </LinearLayout>
+
 </LinearLayout>
