--- a/app/src/main/res/layout/back_dialog.xml
+++ b/app/src/main/res/layout/back_dialog.xml
@@ -48,6 +48,7 @@
             android:gravity="center"
             android:text="@string/confirm"
             android:textSize="@dimen/text_a"
+            android:background="@drawable/my_text_button"
             android:textColor="#6F6F6F" />
 
         <LinearLayout
@@ -63,6 +64,7 @@
             android:gravity="center"
             android:text="@string/cancel"
             android:textSize="@dimen/text_a"
+            android:background="@drawable/my_text_button"
             android:textColor="#6F6F6F" />
     </LinearLayout>
 
