--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="color02">#EFEFF0</color>
     <color name="color03">#D8D8D8</color>
     <color name="list_background_grey">#EFEFEF</color>
+    <color name="text_button_pressed">#BFBFBF</color>
 </resources>
