--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:toggle="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -26,9 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="21dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:text="@string/wifi"
             android:textColor="@color/text_b"
             android:textSize="@dimen/text_b" />
@@ -53,29 +53,49 @@
         android:textColor="@color/text_c"
         android:textSize="@dimen/text_c" />
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/list_radius_corner_background"
-        android:columnCount="4">
+        android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/check_no_network"
-            android:layout_marginLeft="21dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <TextView
-            android:text="@string/search_wifi_fail"
-            android:textColor="@color/text_b" />
+            <CheckBox
+                android:id="@+id/check_no_network"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp" />
 
-        <CheckBox
-            android:id="@+id/check_connect_fail"
-            android:layout_marginLeft="60dp" />
+            <TextView
+                style="@style/Widget.MyCheckBox.TextView"
+                android:text="@string/search_wifi_fail" />
+        </LinearLayout>
 
-        <TextView
-            android:text="@string/connect_wifi_fail"
-            android:textColor="@color/text_b" />
-    </GridLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/check_connect_fail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp" />
+
+            <TextView
+                style="@style/Widget.MyCheckBox.TextView"
+                android:text="@string/connect_wifi_fail" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tips"
